shortcode/aosc-os-warnings: use table to prevent multi-line text overlapping with time section

--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -29,6 +29,12 @@
     span
       color: #797775
       margin-right: .3em
+  .list
+    margin: 0
+    .date
+      padding-right: .25em
+    .link
+      padding-left: .25em
 .card.success
   color: #498205
   fill: #498205
